use-cases-custom/dp-keepalive-rbc-uc1.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: rbc-uc1
---
apiVersion: v1
kind: Service
metadata:
  name: uc1-backend
  namespace: rbc-uc1
  labels:
    app: uc1-backend
    service: uc1-backend
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: uc1-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uc1-backend
  namespace: rbc-uc1
spec:
  replicas: 4
  selector:
    matchLabels:
      app: uc1-backend
      version: v1
  template:
    metadata:
      labels:
        app: uc1-backend
        version: v1
    spec:
      serviceAccountName: uc1-backend
      containers:
        - image: gcr.io/k8s-staging-gateway-api/echo-basic:v20231214-v1.0.0-140-gf544a46e
          imagePullPolicy: IfNotPresent
          name: uc1-backend
          ports:
            - containerPort: 3000
