use-cases-custom/01-uc1-long-running-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: sth-keepalive-timeout-gateway
  namespace: rbc-uc1
spec:
  gatewayClassName: tigera-gateway-class
  listeners:
    - name: app-example-com
      hostname: app.example.com
      port: 80
      protocol: HTTP
#      allowedRoutes:
#        namespaces:
#          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rbc-uc1
  namespace: rbc-uc1
spec:
  parentRefs:
    - name: sth-keepalive-timeout-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: uc1-backend
          port: 3000
  hostnames:
    - app.example.com
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: rbc-uc1
  namespace: rbc-uc1
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: rbc-uc1
  timeout:
    http:
      connectionIdleTimeout: 590s
      requestTimeout: 590s
  requestBuffer:
    limit: 110Mi
