use-cases-custom/02-uc-sticky-session-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx
  namespace: uc2-custom
spec:
  gatewayClassName: tigera-gateway-class
  listeners:
    - name: app-example-com
      hostname: app.example.com
      port: 80
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uc2-custom
  namespace: uc2-custom
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: nginx
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: web-service
          port: 80
  hostnames:
    - app.example.com
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: uc2-custom-session-affinity
  namespace: uc2-custom
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: uc2-custom
  loadBalancer:
    type: ConsistentHash
    consistentHash:
      type: Cookie
      cookie:
        name: route
        attributes:
          path: /
          sameSite: Lax
        ttl: 14400s
